apps/base/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
        try: "0"
        policy-type: "app"
    spec:
      securityContext:
        fsGroup: 65534 # Assigns 'nobody' group permissions to the PVC volume
      containers:
        - name: wallabag
          image: ghcr.io/wallabag/docker:2.6.10
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-pvc
