apps/base/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.wallabag"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  number: 80
